--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+logging.level.org.springframework=debug
+spring.profiles.active=dev
+
+currency-service.url = defaultURL
+currency-service.username = defaultUsername
+currency-service.key = defaultKey
